<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>nl.hauntedmc.serverfeatures</groupId>
    <artifactId>serverfeatures</artifactId>
    <version>2.5.2</version>
    <packaging>jar</packaging>
    <name>ServerFeatures</name>
    <url>https://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Platform and HauntedMC module APIs. -->
        <adventure.version>5.2.0</adventure.version>
        <gson.version>2.14.0</gson.version>
        <paper.version>26.1.2.build.74-stable</paper.version>
        <dataregistry.version>1.11.5</dataregistry.version>
        <dataprovider.version>3.0.5</dataprovider.version>
        <proxyfeatures.version>2.11.4</proxyfeatures.version>

        <!-- External plugin APIs and bundled libraries. -->
        <viaversion.version>[5.0.0,6.0.0)</viaversion.version>
        <placeholderapi.version>2.12.3</placeholderapi.version>
        <commons.text.version>1.15.0</commons.text.version>
        <classgraph.version>4.8.184</classgraph.version>
        <json.simple.version>1.1.1</json.simple.version>
        <packetevents.version>2.13.0</packetevents.version>
        <citizens.version>2.0.37-SNAPSHOT</citizens.version>
        <vault.version>1.7.1</vault.version>
        <luckperms.version>5.5</luckperms.version>
        <libsdisguises.version>11.0.18</libsdisguises.version>
        <worldguard.version>7.0.17</worldguard.version>
        <fawe.version>2.15.3</fawe.version>
        <griefprevention.version>18.0.0</griefprevention.version>
        <essentialsx.version>2.21.2</essentialsx.version>
        <junit.version>6.1.2</junit.version>
        <nuvotifier.version>2.7.2</nuvotifier.version>
        <commons.lang3.version>3.20.0</commons.lang3.version>
        <javax.annotation.version>1.3.2</javax.annotation.version>
        <jsr305.version>3.0.2</jsr305.version>
        <snakeyaml.version>2.6</snakeyaml.version>

        <!-- Build and test tooling. -->
        <mockito.version>5.23.0</mockito.version>
        <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
        <maven.enforcer.plugin.version>3.6.2</maven.enforcer.plugin.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/HauntedMC/${project.name}</url>
        </repository>
    </distributionManagement>

    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <paperweight-mappings-namespace>mojang</paperweight-mappings-namespace>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-adventure-5</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <bannedDependencies>
                                    <searchTransitive>true</searchTransitive>
                                    <excludes>
                                        <exclude>net.kyori:adventure-*:[0,5.0.0)</exclude>
                                    </excludes>
                                    <message>Adventure 4.x is not supported. Keep all Adventure dependencies on 5.x.</message>
                                </bannedDependencies>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <configLocation>${basedir}/checkstyle.xml</configLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <failOnViolation>true</failOnViolation>
                    <violationSeverity>warning</violationSeverity>
                    <consoleOutput>true</consoleOutput>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>13.8.0</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.6</version>
                <configuration>
                    <useModulePath>false</useModulePath>
                    <argLine>-Dnet.bytebuddy.experimental=true -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>io.github.classgraph</pattern>
                                    <shadedPattern>nl.hauntedmc.serverfeatures.shaded.classgraph</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.apache.commons.text</pattern>
                                    <shadedPattern>nl.hauntedmc.serverfeatures.shaded.commons_text</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>nonapi.io.github.classgraph</pattern>
                                    <shadedPattern>nl.hauntedmc.serverfeatures.shaded.nonapi.classgraph</shadedPattern>
                                </relocation>
                            </relocations>
                            <artifactSet>
                                <includes>
                                    <include>nl.hauntedmc.commonlib:commonlib</include>
                                    <include>io.github.classgraph:classgraph</include>
                                    <include>org.apache.commons:commons-text</include>
                                    <include>nl.hauntedmc.proxyfeatures:proxyfeatures</include>
                                </includes>
                            </artifactSet>
                            <filters>
                                <filter>
                                    <artifact>nl.hauntedmc.proxyfeatures:proxyfeatures</artifact>
                                    <includes>
                                        <include>nl/hauntedmc/proxyfeatures/features/sanctions/entity/**</include>
                                    </includes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.kyori</groupId>
                <artifactId>adventure-bom</artifactId>
                <version>${adventure.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.intellectualsites.bom</groupId>
                <artifactId>bom-newest</artifactId>
                <version>1.56</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository><id>central</id><url>https://repo.maven.apache.org/maven2</url></repository>
        <repository><id>papermc</id><url>https://repo.papermc.io/repository/maven-public/</url></repository>
        <repository><id>essentials-releases</id><url>https://repo.essentialsx.net/releases/</url></repository>
        <repository><id>enginehub</id><url>https://maven.enginehub.org/repo/</url></repository>
        <repository><id>spigot-repo</id><url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url></repository>
        <repository><id>jitpack.io</id><url>https://jitpack.io</url></repository>
        <repository><id>placeholderapi</id><url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url></repository>
        <repository><id>codemc-releases</id><url>https://repo.codemc.io/repository/maven-releases/</url></repository>
        <repository><id>codemc-snapshots</id><url>https://repo.codemc.io/repository/maven-snapshots/</url></repository>
        <repository><id>md_5-public</id><url>https://repo.md-5.net/content/groups/public/</url></repository>
        <repository><id>md_5-releases</id><url>https://repo.md-5.net/content/repositories/releases/</url></repository>
        <repository><id>citizens-repo</id><url>https://maven.citizensnpcs.co/repo</url></repository>
        <repository><id>libsdisguises-public</id><url>https://mvn.lib.co.nz/public/</url></repository>
        <repository><id>viaversion-repo</id><url>https://repo.viaversion.com</url></repository>
        <repository><id>github</id><url>https://maven.pkg.github.com/HauntedMC/*</url></repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-gson</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-legacy</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-plain</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.viaversion</groupId>
            <artifactId>viaversion-api</artifactId>
            <version>${viaversion.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>nl.hauntedmc.dataregistry</groupId>
            <artifactId>dataregistry-api</artifactId>
            <version>${dataregistry.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>nl.hauntedmc.dataprovider</groupId>
            <artifactId>dataprovider-api</artifactId>
            <version>${dataprovider.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>nl.hauntedmc.proxyfeatures</groupId>
            <artifactId>proxyfeatures</artifactId>
            <version>${proxyfeatures.version}</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>nl.hauntedmc.dataprovider</groupId>
                    <artifactId>dataprovider</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>${placeholderapi.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons.text.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <version>${classgraph.version}</version>
        </dependency>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${json.simple.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.retrooper</groupId>
            <artifactId>packetevents-spigot</artifactId>
            <version>${packetevents.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizens-main</artifactId>
            <version>${citizens.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>${vault.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>${luckperms.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.libraryaddict.disguises</groupId>
            <artifactId>libsdisguises</artifactId>
            <version>${libsdisguises.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>${worldguard.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Core</artifactId>
            <version>${fawe.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Bukkit</artifactId>
            <version>${fawe.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>FastAsyncWorldEdit-Core</artifactId>
                    <groupId>*</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.github.TechFortress</groupId>
            <artifactId>GriefPrevention</artifactId>
            <version>${griefprevention.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.essentialsx</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>${essentialsx.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.NuVotifier</groupId>
            <artifactId>NuVotifier</artifactId>
            <version>${nuvotifier.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons.lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>${javax.annotation.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>${jsr305.version}</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${snakeyaml.version}</version>
        </dependency>
    </dependencies>
</project>
